<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">What Do You Want To Watch?</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search a Movie</string>
    <string name="action_back">Home</string>
    <string name="action_logout">Log out</string>
    <string name="hello_world">Hello world!</string>

    <!-- activity_main (login screen) strings -->
    <string name="login_hint_name">Your Name</string>
    <string name="login_hint_pswd">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_newuser_button">New User</string>
    <string name="login_wrong_login">Wrong Name-Password combination</string>
    <string name="main_logo_desc">Main Logo</string>

    <!-- Create new user -->
    <string name="login_hint_age">dd/mm/yyyy: Your birth date</string>
    <string name="newuser_button">Create User</string>
    <string name="newuser_wrong">Wrong User Configuration</string>

    <!-- main menu -->
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="main_happy_text">What do you want to watch today?</string>
    <string name="title_activity_new_user">Create a new user</string>
    <string name="search_movie">Search for a movie</string>
    <string name="discover_movie">Discover movies</string>
    <string name="surprise_movie">Surprise me!</string>
    <string name="suggestion_movie">You might like...</string>
    <string name="watchlist">Watchlist</string>

    <!-- Settings menu -->
    <string name="settings_category_user">User settings</string>
    <string name="title_activity_display_movie">Movie</string>

    <!-- Movie menu -->
    <string name="moviemenu_interest">Interest</string>
    <string name="title_activity_choose_interest">Choose Interest</string>

    <!-- Discover movies -->
    <string name="label_mostwatched">Most Watched</string>
    <string name="label_playingnow">Playing Now</string>
    <string name="label_comingsoon">Coming Soon</string>

    <!-- Search -->
    <string name="title_activity_search">Search for a movie</string>
    <string name="search_hint">Search by movie, year or director</string>
    <string name="clear_history">Clear History</string>
    <string name="Title">Movie title</string>
    <string name="Year">Movie Year</string>
    <string name="Director">Movie Director</string>
    <string name="title_activity_discover_movies">Discover Movies</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_binary_title">Display dates in Binary</string>
    <string name="pref_binary_descr">Display movies\' dates in binary (for advanced users only)</string>
    <string name="pref_wifi_title">Internet search</string>
    <string name="pref_wifi_descr">Allow the app to look for movies on the Internet, before searching locally</string>
    <string name="pref_nsearch_title">Number to search</string>
    <string name="pref_nsearch_descr">Number of movies to search for and display per category (title, year, director), when using search</string>
    <string name="nsearch_default">10</string>
    <string name="title_activity_watch_list">WatchList</string>

</resources>
