<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sinf1225.whatdoyouwanttowatch.DisplayMovieActivity" >

    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_action_back"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_back"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_interest"
        android:icon="@drawable/ic_action_good"
        android:showAsAction="ifRoom"
        android:title="@string/moviemenu_interest"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_import_export"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_logout" />
</menu>