<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item 
        android:id="@+id/action_search_widget"
       	android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />
    
    <item 
        android:id="@+id/clear_recent_suggestions"
		android:title="@string/clear_history" />
    
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_action_back"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_back"/>
   
</menu>
