<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Settings, to be populated -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_action_back"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_back"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_import_export"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_logout" />

</menu>