<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LL_Fond"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    android:paddingBottom="2dp"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:paddingTop="2dp"
    android:background="@drawable/customborder" >
	
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Movie_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textSize="18sp" 
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/Movie_Year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Year"
            android:typeface="monospace"
            android:paddingLeft="10dp" >
        </TextView>
        
    </LinearLayout>

    <TextView
        android:id="@+id/Movie_Director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Director"
        android:textStyle="italic"
        android:paddingLeft="10dp"
        android:textSize="14sp">
    </TextView>
		
</LinearLayout>
